Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2809

fix ll_setxattr() to always ignore ll_stripe_offset

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0, Lustre 2.1.5
    • 3
    • 6799

      With the introduction of lum_layout_version field to lov_user_md, using "tar --xattr" to backup and restore the Lustre layout (LOV EA) will incorrectly pass the lum_layout_version value back to ll_setxattr() as lum_stripe_offset. This will incorrectly turn the layout version into the starting OST index, for cases where the version is within [1,max_ost_idx].

      This may cause, for example, all files that have been migrated once to be restored by tar onto OST1.

            jay Jinshan Xiong (Inactive)
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved: