lustre/utils/liblustreapi.c
@@ -2099,7 +2099,7 @@ static void lov_dump_user_lmm_header(struct lov_user_md *lum, char *path,
                         llapi_printf(LLAPI_MSG_NORMAL, "%slayout_gen:     ",
                                      prefix);
                 llapi_printf(LLAPI_MSG_NORMAL, "%u%c",
-                             (int)lum->u.lum_layout_gen, nl);
+				(int)lum->lmm_layout_gen, nl);
         }
 
         if (verbose & VERBOSE_OFFSET) {
